Fix: reset deck